Fix: Can't test if it is actually fixed, but bug on mobile Safari menu causing top and bottom to go opaque. Take 3.5

--- a/src/components/layout/Header/Header.module.css
+++ b/src/components/layout/Header/Header.module.css
@@ -152,18 +152,13 @@
 
 /* Mobile Menu Styles */
 .mobileMenu {
-  position: absolute;
-  top: calc(env(safe-area-inset-top) - 2rem);
-  left: -1rem;
+  position: fixed;
+  inset: 0;
   backdrop-filter: blur(24px);
   z-index: -1;
   transition: all 400ms cubic-bezier(0.4, 0, 0.2, 1);
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
-  margin: 0;
-  padding: 0;
 }
 
 .mobileMenuVisible {
